--- a/BlissSite/build.xml
+++ b/BlissSite/build.xml
@@ -5,44 +5,45 @@
               directory with the processing instruction <?eclipse.ant.import?>
               as the first entry and export the buildfile again. --><project basedir="." default="build" name="BlissSite">
     <property environment="env"/>
-    <property name="ECLIPSE_HOME" value="../../Downloads/eclipse-standard-luna-R-win32-x86_64/eclipse/"/>
+    <property name="ECLIPSE_HOME" value="../../../Downloads/eclipse-standard-luna-R-win32-x86_64/eclipse/"/>
     <property name="debuglevel" value="source,lines,vars"/>
-  	<property name="tomcat.home" value="C:/Program Files/Apache Software Foundation/Tomcat 8.0"/>
+    <property name="target" value="1.8"/>
+    <property name="source" value="1.8"/>
+	<property name="tomcat.home" value="C:/Program Files/Apache Software Foundation/Tomcat 8.0"/>
   	<property name="tomcat.lib" value="${tomcat.home}/lib" />
   	<property name="deploy.path" value="${tomcat.home}/webapps"/>
   	<property name="project-name" value="Bliss"/>
   	<property name="web.dir" value="C:/Users/maurice/workspace-tcss305/BlissSite/webapps"/>
-    <property name="target" value="1.8"/>
-    <property name="source" value="1.8"/>
     <path id="Web App Libraries.libraryclasspath">
-        <pathelement location="webapps/WEB-INF/classes"/>
+        <pathelement location="webapps/WEB-INF/lib/org.eclipse.jdt.core_3.10.2.v20150120-1634.jar"/>
+        <pathelement location="../../../../../BlissSite/webapps/WEB-INF/classes"/>
     </path>
     <path id="EAR Libraries.libraryclasspath"/>
     <path id="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath">
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/annotations-api.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-ant.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-ha.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-storeconfig.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-tribes.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/ecj-4.5.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/el-api.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/jasper-el.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/jasper.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/jsp-api.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/servlet-api.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-api.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-coyote.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-dbcp.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-i18n-es.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-i18n-fr.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-i18n-ja.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-jdbc.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-jni.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-util-scan.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-util.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-websocket.jar"/>
-        <pathelement location="../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/websocket-api.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/annotations-api.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-ant.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-ha.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-storeconfig.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-tribes.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/ecj-4.5.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/el-api.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/jasper-el.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/jasper.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/jsp-api.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/servlet-api.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-api.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-coyote.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-dbcp.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-i18n-es.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-i18n-fr.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-i18n-ja.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-jdbc.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-jni.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-util-scan.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-util.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-websocket.jar"/>
+        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 8.0/lib/websocket-api.jar"/>
     </path>
     <path id="BlissSite.classpath">
         <pathelement location="build/classes"/>
@@ -50,12 +51,12 @@
         <path refid="EAR Libraries.libraryclasspath"/>
         <path refid="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath"/>
     </path>
-              	
 	<path id="compile.classpath">
 		<fileset dir="webapps/WEB-INF/lib">
 			<include name="*.jar"/>
 		</fileset>
 	</path>
+              	
     <target name="init">
         <mkdir dir="build/classes"/>
         <copy includeemptydirs="false" todir="build/classes">
@@ -64,21 +65,27 @@
             </fileset>
         </copy>
     </target>
+              	
     <target name="clean">
         <delete dir="build/classes"/>
     	<delete dir="webapps/WEB-INF/classes"/>
     </target>
-    <target depends="clean" name="cleanall"/>
-    <target depends="build-subprojects,build-project" name="build"/>
-    <target name="build-subprojects"/>
-    <target depends="init" name="build-project">
+              	
+	<target name="compile" depends="init" >
+		<mkdir dir="webapps/WEB-INF/classes"/>
+	    <javac destdir="build/classes" debug="true" srcdir="src">
+	        <classpath refid="compile.classpath"/>
+	    </javac>
+	</target>
+
+    <target depends="init,init-eclipse-compiler" name="build">
         <echo message="${ant.project.name}: ${ant.file}"/>
         <javac debug="true" debuglevel="${debuglevel}" destdir="build/classes" includeantruntime="false" source="${source}" target="${target}">
             <src path="src"/>
             <classpath refid="BlissSite.classpath"/>
         </javac>
     </target>
-    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
+              	
     <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
         <copy todir="${ant.library.dir}">
             <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
@@ -87,46 +94,21 @@
             <patternset includes="jdtCompilerAdapter.jar"/>
             <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
         </unzip>
-        <!--<copy todir="webapps/WEB-INF/lib">
-            <fileset dir="/*" includes="/*.jar"/>
-        </copy>-->
     </target>
+              	
     <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
     </target>
-	
-	<target name="compile" depends="init" >
-		<mkdir dir="webapps/WEB-INF/classes"/>
-	    <javac destdir="build/classes" debug="true" srcdir="src">
-	        <classpath refid="compile.classpath"/>
-	    </javac>
-	</target>
-	
-	<!--<target name="war" depends="compile">
-	    <war destfile="Bliss.war" webxml="webapps/WEB-INF/web.xml">
-	        <fileset dir="webapps"/>
-	        <lib dir="webapps/WEB-INF/lib"/>
-	        <classes dir="build/classes"/>
-	    </war>
-		<echo message="${ant.project.name}: ${ant.file}"/>
-		<echo message="${ant.project.name}: ${deploy.path}"/>
-		<copy todir="${deploy.path}/Bliss/webapps">
-			<fileset dir="webapps"/>
-		</copy>
-	</target>-->
+
     <target name="war" depends="compile">        	
 	    <war destfile="Bliss.war" webxml="webapps/WEB-INF/web.xml">
 	       <fileset dir="webapps">
 	          <include name="**/*.*"/>
-	       </fileset>
-	       
-	       <lib dir="webapps/WEB-INF/lib"/>
-	       
+	       </fileset>       
+	       <lib dir="webapps/WEB-INF/lib"/>	       
 	       <classes dir="build/classes"/>
-	    </war>
-    	
-    	
+	    </war>  	
 		<copy todir="${deploy.path}/Bliss/classes">
 			<fileset dir="build/classes"/>
 		</copy>
@@ -134,8 +116,6 @@
 			<fileset dir="webapps"/>
 		</copy> 
 		<copy file="Bliss.war" todir="${deploy.path}">
-		</copy>
-    	
+		</copy> 	
 	</target>
-
 </project>
