Added database and db classes with basic login html

--- a/BlissSite/build.properties
+++ b/BlissSite/build.properties
@@ -1,8 +1,10 @@
 tomcat.home=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.0
 tomcat.lib=${tomcat.home}\\lib
-
 deploy.path=${tomcat.home}\\webapps
-
-
 project-name=Bliss
 web.dir=C:\\Users\\maurice\\workspace-tcss305\\BlissSite\\webapps
+<!--Database infomation-->
+database.hostname=db4free.net
+database.port=3306
+database.username=blissfashion
+database.password=blissfashion
